i made a preliminary attempt at integrating splint into the project. currently, the integration only functions on Linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ project(ramalloc)
 
 include(CTest)
 
+include(cmake/splint.cmake)
+
 # CPack integration
 # -----------------
 # TODO: i'm not yet sure how to write the following include file but i'm
@@ -112,7 +114,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ramalloc 
 	DESTINATION include)
 
-add_library(ramalloc
+set(RAMALLOC_HEADERS
 	include/ramalloc/algn.h
 	include/ramalloc/barrier.h
 	include/ramalloc/compat.h
@@ -145,6 +147,8 @@ add_library(ramalloc
 	include/ramalloc/tls.h
 	include/ramalloc/tra.h
 	include/ramalloc/vec.h
+	)
+set(RAMALLOC_SOURCES
 	src/lib/algn.c
 	src/lib/barrier.c
 	src/lib/compat.c
@@ -172,6 +176,8 @@ add_library(ramalloc
 	src/lib/tra.c
 	src/lib/vec.c
 	)
+
+add_library(ramalloc ${RAMALLOC_SOURCES} ${RAMALLOC_HEADERS})
 install(TARGETS ramalloc DESTINATION lib)
 
 # tests
@@ -285,4 +291,7 @@ else(UNIX)
 	install(FILES LICENSE README.md ROFLME.md DESTINATION .)
 endif(UNIX)
 
+# splint
+# ------
+add_splint(${RAMALLOC_SOURCES} src/test/*.c src/test/shared/*.c)
 
