i performed a preliminary integration of doxygen with the build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -290,7 +290,7 @@ endif(UNIX)
 
 # documentation
 # -------------
-include(cmake/doxys.cmake)
-add_doxys(ramalloc ${RAMALLOC_HEADERS} ${RAMALLOC_SOURCES})
+include(cmake/doxygen.cmake)
+add_doxygen(ramalloc ${RAMALLOC_HEADERS} ${RAMALLOC_SOURCES})
 
 
