i turned on all Visual C++ warnings by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ if(NOT RAMALLOC_IS_CONFIGURED)
 		# to interfere with C89-defined behavior.
 		set(CMAKE_C_FLAGS "-Wall -Wextra -Wno-missing-braces -Wno-missing-field-initializers")
 	elseif(MSVC)
-		set(CMAKE_C_FLAGS "/W3")
+		set(CMAKE_C_FLAGS "/Wall")
 	endif()
 	# save defaults to cache.
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}" CACHE STRING
