i disabled C4127 because it pops up every time a "do {} while (0)" is used.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,8 @@ if(NOT RAMALLOC_IS_CONFIGURED)
 		# to interfere with C89-defined behavior.
 		set(CMAKE_C_FLAGS "-Wall -Wextra -Wno-missing-braces -Wno-missing-field-initializers")
 	elseif(MSVC)
-		set(CMAKE_C_FLAGS "/W4")
+		# C4127 pops up every time a "do {} while (0)" is used.
+		set(CMAKE_C_FLAGS "/W4 /wd4127")
 	endif()
 	# save defaults to cache.
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}" CACHE STRING
