i refactored the numeric cast functions to reduce the amount of duplicated code. i also wrote a set of tests to verify that the code behaves reliably.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,14 @@ set(RAMALLOC_SHARED_TEST_HEADERS
 	src/test/shared/test.h
 	)
 
+set(CASTTEST_SOURCES
+	src/test/casttest.c
+	)
+add_executable(casttest ${CASTTEST_SOURCES})
+add_splint(casttest ${CASTTEST_SOURCES})
+target_link_libraries(casttest ${RAMALLOC_LIBRARIES})
+add_test(casttest ${EXECUTABLE_OUTPUT_PATH}/casttest)
+
 set(SLOTTEST_SOURCES 
 	src/test/slottest.c
 	${RAMALLOC_SHARED_TEST_SOURCES}
